# avataa-groups

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  pytest.ini
app/: alembic.ini  init_app.py  main.py
app/api/: utils.py
app/api/api_v1/: router.py
app/base/: base_accessor.py  enums.py
app/core/: app.py  config.py  logger.py
app/crud/: crud_element.py  crud_group.py  crud_group_template.py  crud_group_type.py  element.py  group.py  group_template.py
app/crud/protocols/: utils.py
app/infrastructure/: router.py
app/migrations/: env.py
app/migrations/versions/: 105639668925_add_process_instance_key_in_group_table.py  2f7cd84f25ff_add_keeping_tmo_id_in_group.py  532a7010a9d4_add_aggregate_column_for_group_table.py  5b48c0470bdb_add_ranges_object_to_group_template.py  8a50635278f7_init.py  98cdcdd64c49_add_group_filter_column.py  bccb96dff802_add_nullable_value_for_ranges_filters.py  bee0a2f49059_add_range_objects_to_group.py  d23e1525575a_add_minimal_quantity_for_auto_generate_.py  dba887d19689_add_is_valid_for_model.py  ddcd9c681f59_add_template_for_group.py
app/models/: model_element.py  model_group.py  model_group_template.py  model_group_type.py
app/schemas/: schema_element.py  schema_group.py  schema_group_template.py  schema_group_type.py
app/store/: __init__.py
app/store/api/: accessor.py
app/store/db/: accessor.py  base.py  (+1 more)
tests/: config.py  conftest.py
tests/crud/: test_auto_group.py  test_element.py  test_group.py  test_group_type.py
tests/fixtures/: common.py  group.py  group_type.py
tests/utils/: utils.py
(+41 files in other folders)
