[project]
name = "group"
version = "3.0.10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.17.0",
    "asyncpg==0.30.0",
    "authlib==1.6.5",
    "confluent-kafka[protobuf,schemaregistry]==2.12.0",
    "fastapi==0.119.0",
    "grpcio==1.75.1",
    "httpx==0.28.1",
    "protobuf==6.33.0",
    "pydantic==2.12.2",
    "pydantic-settings==2.11.0",
    "pyjwt==2.10.1",
    "python-keycloak==5.8.1",
    "redis==6.4.0",
    "sqlalchemy[asyncio]==2.0.44",
    "uvicorn[standard]==0.37.0",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.75.1",
    "mypy==1.18.2",
    "pre-commit==4.3.0",
]
lint = [
    "ruff==0.14.0",
]
tests = [
    "asyncpg==0.30.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "testcontainers==4.13.2",
]
security = [
    "pip-audit==2.9.0",
]
migrations = [
    "alembic>=1.17.0",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "pydantic-settings>=2.11.0",
    "python-keycloak>=5.8.1",
]
